--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "glob-parent": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-typewriter-effect": "^1.1.0"
   },
   "devDependencies": {
